src/examples/should_fail/clash_nonterminal_enum_variants.kiki
start Foo

enum Foo {
    Ipsum($Ident)
    Ipsum($Bool)
}

terminal Token {
    $Ident: String
    $Bool: bool
}
